<resources>
  <string name="app_name">pocket-library</string>
  <string name="sample_book_title">Code Complete: A Practical Handbook of Software Construction</string>
  <string name="sample_book_author">Mike Riley</string>
  <string name="sample_book_isbn">978-0735619678</string>
  <string name="sample_book_description">Widely considered one of the best practical guides to programming, Steve McConnell’s original CODE COMPLETE has been helping developers write better software for more than a decade. Now this classic book has been fully updated and revised with leading-edge practices—and hundreds of new code samples—illustrating the art and science of software construction. Capturing the body of knowledge available from research, academia, and everyday commercial practice, McConnell synthesizes the most effective techniques and must-know principles into clear, pragmatic guidance. No matter what your experience level, development environment, or project size, this book will inform and stimulate your thinking—and help you build the highest quality code.</string>
  <string name="sample_book_price">$ 2954</string>
  <string name="api_error_fetch_books">Error fetching book list data</string>
  <string name="api_error_fetch_book">Error fetching book data</string>
  <string name="error_fetch_books">Error fetching books data</string>
</resources>
